[gd_scene load_steps=2 format=3 uid="uid://lrwmtif8y4f3"]

[ext_resource type="Script" path="res://Components/interaction_area_component.gd" id="1_h42vu"]

[node name="InteractionArea" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_h42vu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
